Small refactor - allowing you to configure the two other time zones which are displayed.

--- a/website/index.html
+++ b/website/index.html
@@ -63,8 +63,14 @@
         </div>
         <div class="col">
             <table>
-                <tr><td class="pr-2"><span>🇺🇸</span> DC</td><td class="border-left pl-1 world-clock" id="dc-time"></td></tr>
-                <tr><td class="pr-2"><span>🇪🇹</span> Addis</td><td class="border-left pl-1 world-clock" id="addis-time"></td></tr>
+                <tr>
+                    <td id="time-zone-1-name" class="pr-2"><span>🇺🇸</span> DC</td>
+                    <td class="border-left pl-1 world-clock" id="time-zone-1-time"></td>
+                </tr>
+                <tr>
+                    <td id="time-zone-2-name" class="pr-2"><span>🇪🇹</span> Addis</td>
+                    <td class="border-left pl-1 world-clock" id="time-zone-2-time"></td>
+                </tr>
             </table>
         </div>
         <div class="col-5">
@@ -230,7 +236,6 @@
 
 <script src="js/jquery-v3.5.0.min.js" crossorigin="anonymous">
 </script>
-<script type="text/javascript" src="js/runtime-config.js"></script>
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/date-and-time.js"></script>
 <script type="text/javascript" src="js/public-transport.js"></script>
