Small refactor - only getting the runtime_config.json once.

--- a/website/index.html
+++ b/website/index.html
@@ -16,8 +16,8 @@
     <!-- ///////// DATE AND TIME /////// -->
     <div id="date-time-messages" class="row border-bottom pb-3">
         <div class="col-5">
-            <div id="uk-time-zone"></div>
-            <div id="uk-time" class="display-1"></div>
+            <div id="local-time-zone"></div>
+            <div id="local-time" class="display-1"></div>
             <div>
                 <table id="api-calls">
                     <tr>
