--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><img width="20px;" height="20px;" src="img/trello-app-icon.png"/></td>
+                        <td><img width="18px;" height="18px;" src="img/trello-app-icon.png"/></td>
                         <td></td>
                         <td id="tasks-update"
                             class="refresh-time text-right"
@@ -55,6 +55,21 @@
                         <td colspan="3">
                             <div class="progress" style="height: 3px;">
                                 <div id="tasks-update-progress-bar"  class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>&#128646;</td>
+                        <td></td>
+                        <td id="train-travel-update"
+                            class="refresh-time text-right"
+                            next-refresh-time=""
+                            refresh-period-in-seconds=""></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">
+                            <div class="progress" style="height: 3px;">
+                                <div id="train-travel-update-progress-bar"  class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </td>
                     </tr>
@@ -95,6 +110,9 @@
         <ul id="user-messages" class="list-unstyled" ></ul>
     </div>
     <!-- -->
+
+    <!-- ///////// SCHOOL RUN /////// -->
+    <div id="school-run-departure-time" class="text-center display-1 text-danger d-none"></div>
 
     <!-- ///////// WEATHER /////// -->
     <div id="weather" class="row border p-1">
@@ -211,8 +229,18 @@
         </table>
     </div>
 
+    <!-- ///////// TRAVEL /////// -->
+    <div id="travel" class="row">
+        <div class="col p-0">
+            <table class="border-bottom border-left" width="100%">
+                <tr id="bus-travel" class="border-bottom"></tr>
+                <tr  id="train-travel" class="border-bottom"></tr>
+            </table>
+        </div>
+    </div>
+
     <!-- ///////// TASKS /////// -->
-    <div class="row p-4">
+    <div class="row">
         <div class="col" id="tasks">
             <div class="row" id="tasks-headings">
                 <div class="col h3">Todo</div>
@@ -238,7 +266,7 @@
 </script>
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/date-and-time.js"></script>
-<script type="text/javascript" src="js/public-transport.js"></script>
+<script type="text/javascript" src="js/travel.js"></script>
 <script type="text/javascript" src="js/tasks.js"></script>
 <script type="text/javascript" src="js/testing-and-debugging.js"></script>
 <script type="text/javascript" src="js/weather-forecast.js"></script>
