--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
 <div class="container-fluid">
-
+    <div id="dynamic-runtime-config" class="pl-4 pt-3 d-none">
+        <div>
+            <div class="alert alert-success" role="alert">
+                <p class="mb-0">You dont have the file <a href="js/runtime-config.json">js/runtime-config.json</a> configured.</p>
+            </div>
+        </div>
+    </div>
     <!-- ///////// DATE AND TIME /////// -->
     <div id="date-time-messages" class="row border-bottom pb-3">
         <div class="col-5">
@@ -91,7 +97,7 @@
         <div class="col-5">
             <div id="date" class="display-4 text-right"></div>
             <div>
-                <table border="0" class="m-4">
+                <table class="m-4">
                     <tr>
                         <td class="sun_rise" style="width: 80px; height: 90px;"></td>
                         <td class="sun_set" style="width: 80px; height: 90px;"></td>
@@ -116,7 +122,7 @@
 
     <!-- ///////// WEATHER /////// -->
     <div id="weather" class="row border p-1">
-        <table border="0" width="100%" class="ml-4 pt-1 pb-1 pr-1">
+        <table class="ml-4 pt-1 pb-1 pr-1">
             <tr>
                 <td id="weather-date-now"  style="width: 80px; height: 20px;"></td>
                 <td id="weather-date-plus-6hrs"  style="width: 80px; height: 20px;"></td>
@@ -129,7 +135,7 @@
             </tr>
             <tr>
                 <td>
-                    <table border="0">
+                    <table>
                         <tr>
                             <td id="weather-image-now" style="width: 80px; height: 90px;"></td>
                             <td><!--used to keep image cell above from expanding--></td>
@@ -137,7 +143,7 @@
                     </table>
                 </td>
                 <td>
-                    <table border="0">
+                    <table>
                         <tr>
                             <td id="weather-image-plus-6hrs" style="width: 80px; height: 90px;"></td>
                             <td><!--used to keep image cell above from expanding--></td>
@@ -146,7 +152,7 @@
                 </td>
                 <td class="border-left"  style="width: 10px; height: 20px;"></td>
                 <td >
-                    <table border="0">
+                    <table>
                         <tr>
                             <td id="weather-image-day-1" style="width: 80px; height: 90px;"></td>
                             <td><!--used to keep image cell above from expanding--></td>
@@ -154,7 +160,7 @@
                     </table>
                 </td>
                 <td>
-                    <table border="0">
+                    <table>
                         <tr>
                             <td id="weather-image-day-2" style="width: 80px; height: 90px;"></td>
                             <td><!--used to keep image cell above from expanding--></td>
@@ -162,7 +168,7 @@
                     </table>
                 </td>
                 <td>
-                    <table border="0">
+                    <table>
                         <tr>
                             <td id="weather-image-day-3" style="width: 80px; height: 90px;"></td>
                             <td><!--used to keep image cell above from expanding--></td>
@@ -170,7 +176,7 @@
                     </table>
                 </td>
                 <td>
-                    <table border="0">
+                    <table>
                         <tr>
                             <td id="weather-image-day-4" style="width: 80px; height: 90px;"></td>
                             <td><!--used to keep image cell above from expanding--></td>
@@ -178,7 +184,7 @@
                     </table>
                 </td>
                 <td>
-                    <table border="0">
+                    <table>
                         <tr>
                             <td id="weather-image-day-5" style="width: 80px; height: 90px;"></td>
                             <td><!--used to keep image cell above from expanding--></td>
@@ -232,7 +238,7 @@
     <!-- ///////// TRAVEL /////// -->
     <div id="travel" class="row">
         <div class="col p-0">
-            <table class="border-bottom border-left" width="100%">
+            <table class="border-bottom border-left">
                 <tr id="bus-travel" class="border-bottom"></tr>
                 <tr  id="train-travel" class="border-bottom"></tr>
             </table>
@@ -240,8 +246,8 @@
     </div>
 
     <!-- ///////// TASKS /////// -->
-    <div class="row">
-        <div class="col" id="tasks">
+    <div id="tasks" class="row">
+        <div class="col">
             <div class="row" id="tasks-headings">
                 <div class="col h3">Todo</div>
                 <div class="col h3">In progress</div>
