Bugfix - need to set 100% for this to look good.

--- a/website/index.html
+++ b/website/index.html
@@ -122,7 +122,7 @@
 
     <!-- ///////// WEATHER /////// -->
     <div id="weather" class="row border p-1">
-        <table class="ml-4 pt-1 pb-1 pr-1">
+        <table width="100%" class="ml-4 pt-1 pb-1 pr-1">
             <tr>
                 <td id="weather-date-now"  style="width: 80px; height: 20px;"></td>
                 <td id="weather-date-plus-6hrs"  style="width: 80px; height: 20px;"></td>
