Improving the README.md, bugfix in UI, updating how long messages are shown from 2 to 5 seconds.

--- a/website/index.html
+++ b/website/index.html
@@ -238,7 +238,7 @@
     <!-- ///////// TRAVEL /////// -->
     <div id="travel" class="row">
         <div class="col p-0">
-            <table class="border-bottom border-left">
+            <table class="border-bottom border-left" width="100%">
                 <tr id="bus-travel" class="border-bottom"></tr>
                 <tr  id="train-travel" class="border-bottom"></tr>
             </table>
