WIP - Refactoring as responsive elements; now with individual weather icons as single images with squares selected out in css was not working for responsive pages; found a way to unit-test methods

--- a/website/index.html
+++ b/website/index.html
@@ -103,8 +103,8 @@
                                 <td class="sun_set" style="width: 80px; height: 90px;"></td>
                             </tr>
                             <tr>
-                                <td id="weather-text-sun-rise"></td>
-                                <td id="weather-text-sun-set"></td>
+                                <td id="sun-rise-time"></td>
+                                <td id="sun-set-time"></td>
                             </tr>
                         </table>
                     </div>
@@ -268,8 +268,7 @@
             </div>
         </div>
 
-        <script src="js/jquery-v3.5.0.min.js" crossorigin="anonymous">
-        </script>
+        <script src="js/jquery-v3.5.0.min.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/date-and-time.js"></script>
         <script type="text/javascript" src="js/travel.js"></script>
