Moved data files into website/data folder, time zones are now data driven, changed config files to be less cryptic (users put in station names, and I look up the code)

--- a/website/index.html
+++ b/website/index.html
@@ -32,7 +32,7 @@
                                 <div id="date" class="display-4 text-right"></div>
                             </div>
                             <div class="row">
-                                <div class="col">
+                                <div class="col-4">
                                     <div class="row">
                                         <div class="col sunrise-icon">
                                             <img src="img/weather-icons/sunrise.png" width="60px">
@@ -44,17 +44,9 @@
                                         <div class="col"></div>
                                     </div>
                                 </div>
-                                <div class="col pt-3">
-                                    <div class="row">
-                                        <span id="time-zone-1-name" class="col-4">DC</span>
-                                        <span id="time-zone-1-time" class="col">03:04</span>
-                                    </div>
-                                    <div class="row">
-                                        <span id="time-zone-2-name" class="col-4">Addis</span>
-                                        <span id="time-zone-2-time" class="col">11:04</span>
-                                    </div>
+                                <div id="time-zones" class="col-4">
                                 </div>
-                                <div class="col">
+                                <div class="col-4">
                                     <div class="row">
                                         <div class="col sunset-icon">
                                             <img src="img/weather-icons/sunset.png" width="60px">
