Bugfix: Updated all references for js/runtime-config.json to data/runtime-config.json to reflect new location for the file.

--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
         <div id="main-container" class="container-fluid border">
             <div id="dynamic-runtime-config" class="row pl-2 pt-3 d-none">
                 <div class="col alert alert-success" role="alert">
-                    <p class="mb-0">You dont have the file <a href="js/runtime-config.json">js/runtime-config.json</a> configured.</p>
+                    <p class="mb-0">You dont have the file <a href="data/runtime-config.json">data/runtime-config.json</a> configured.</p>
                 </div>
             </div>
             <div class="row pl-2">
