Refactor to make runtime-config.json easier to use, improved UI for the schoolRun, improved testing.

--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,10 @@
             <div class="row pl-2">
                 <div class="col">
                     <!-- ///////// SCHOOL RUN /////// -->
-                    <div id="school-run-departure-time" class="row text-center display-2 text-danger d-none"></div>
+                    <div id="school-run" class="row display-2 d-none pb-5">
+                        <div class="col-2 text-center">🏫</div>
+                        <div id="school-run-departure-time" class="col-10 text-center"></div>
+                    </div>
                     <div id="user-messages-div" class="row">
                         <ul id="user-messages" class="list-unstyled" ></ul>
                     </div>
