WIP - refactor - built out the updateModel code with tests - now need to build the updateUI code.

--- a/website/index.html
+++ b/website/index.html
@@ -294,6 +294,11 @@
         <script type="text/javascript" src="js/date-and-time.js"></script>
         <script type="text/javascript" src="js/travel.js"></script>
         <script type="text/javascript" src="js/tasks.js"></script>
+
+        <script type="text/javascript" src="js/travel-2.js"></script>
+        <script type="text/javascript" src="js/tasks-2.js"></script>
+        <script type="text/javascript" src="js/weather-forecast-2.js"></script>
+
         <script type="text/javascript" src="js/testing-and-debugging.js"></script>
         <script type="text/javascript" src="js/weather-forecast.js"></script>
         <script type="text/javascript" src="js/testing-and-debugging.js"></script>
