WIP - dealing with error response to remote calls

--- a/website/index.html
+++ b/website/index.html
@@ -303,5 +303,6 @@
         <script type="text/javascript" src="js/weather-forecast.js"></script>
         <script type="text/javascript" src="js/testing-and-debugging.js"></script>
         <script type="text/javascript" src="js/family-dashboard.js"></script>
+        <script type="text/javascript" src="js/family-dashboard-2.js"></script>
     </body>
 </html>
