--- a/website/index.html
+++ b/website/index.html
@@ -70,19 +70,8 @@
                                     <div class="col"></div><div class="col text-right">Next update</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col pr-2">&#9928;</div>
-                                    <div class="col refresh-time text-right" id="weather-update"  next-refresh-time="" refresh-period-in-seconds=""></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="progress" style="height: 5px;">
-                                            <div id="weather-update-progress-bar" class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
                                     <div class="col pr-2"><img width="18px;" height="18px;" src="img/trello-app-icon.png"/></div>
-                                    <div class="col refresh-time text-right" id="tasks-update"  next-refresh-time="" refresh-period-in-seconds=""></div>
+                                    <div id="tasks-update" next-refresh-time="" refresh-period-in-seconds="" class="col refresh-time text-right" ></div>
                                 </div>
                                 <div class="row">
                                     <div class="col">
@@ -93,12 +82,23 @@
                                 </div>
                                 <div class="row">
                                     <div class="col pr-2">&#128646;</div>
-                                    <div class="col refresh-time text-right" id="train-travel-update"  next-refresh-time="" refresh-period-in-seconds=""></div>
+                                    <div id="train-travel-update"  next-refresh-time="" refresh-period-in-seconds="" class="col refresh-time text-right"></div>
                                 </div>
                                 <div class="row">
                                     <div class="col">
                                         <div class="progress" style="height: 5px;">
                                             <div id="train-travel-update-progress-bar" class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col pr-2">&#9928;</div>
+                                    <div id="weather-update"  next-refresh-time="" refresh-period-in-seconds="" class="col refresh-time text-right" ></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="progress" style="height: 5px;">
+                                            <div id="weather-update-progress-bar" class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -270,16 +270,16 @@
                         <div class="col">
                             <div class="row" id="tasks-headings">
                                 <div class="col h3">Todo</div>
-                                <div class="col h3">In progress</div>
+<!--                                <div class="col h3">In progress</div>-->
 <!--                                <div class="col h3">Done</div>-->
                             </div>
                             <div class="row">
                                 <div class="col">
                                     <ul class="list-unstyled" id="todo"></ul>
                                 </div>
-                                <div class="col border-left">
-                                    <ul class="list-unstyled" id="in-progress"></ul>
-                                </div>
+<!--                                <div class="col border-left">-->
+<!--                                    <ul class="list-unstyled" id="in-progress"></ul>-->
+<!--                                </div>-->
 <!--                                <div class="col">-->
 <!--                                    <ul class="list-unstyled" id="done"></ul>-->
 <!--                                </div>-->
@@ -294,15 +294,8 @@
         <script type="text/javascript" src="js/date-and-time.js"></script>
         <script type="text/javascript" src="js/travel.js"></script>
         <script type="text/javascript" src="js/tasks.js"></script>
-
-        <script type="text/javascript" src="js/travel-2.js"></script>
-        <script type="text/javascript" src="js/tasks-2.js"></script>
-        <script type="text/javascript" src="js/weather-forecast-2.js"></script>
-
-        <script type="text/javascript" src="js/testing-and-debugging.js"></script>
         <script type="text/javascript" src="js/weather-forecast.js"></script>
         <script type="text/javascript" src="js/testing-and-debugging.js"></script>
         <script type="text/javascript" src="js/family-dashboard.js"></script>
-        <script type="text/javascript" src="js/family-dashboard-2.js"></script>
     </body>
 </html>
