--- a/website/index.html
+++ b/website/index.html
@@ -21,13 +21,13 @@
                         <div class="col-2 text-center">🏫</div>
                         <div id="school-run-departure-time" class="col-10 text-center"></div>
                     </div>
-                    <div id="user-messages-div" class="row">
-                        <ul id="user-messages" class="list-unstyled" ></ul>
+                    <div id="user-messages-div" class="row d-none h-100 overflow-hidden">
+                        <ul id="user-messages" class="list-unstyled h-100 overflow-hidden" ></ul>
                     </div>
                 </div>
             </div>
             <div id="dashboard-main" class="row pl-2 border-top d-none">
-                <div class="col-8">
+                <div id="date-travel-weather" class="col-8">
                     <div class="row border-bottom">
                         <!-- ///////// DATE AND TIME /////// -->
                         <div class="col">
@@ -35,7 +35,7 @@
                                 <div id="date" class="display-4 text-right"></div>
                             </div>
                             <div class="row">
-                                <div class="col-4">
+                                <div class="col-4  weather-element">
                                     <div class="row">
                                         <div class="col sunrise-icon">
                                             <img src="img/weather-icons/sunrise.png" width="60px">
@@ -49,14 +49,14 @@
                                 </div>
                                 <div id="time-zones" class="col-4">
                                 </div>
-                                <div class="col-4">
-                                    <div class="row">
+                                <div class="col-4 weather-element">
+                                    <div class="row float-right">
                                         <div class="col sunset-icon">
                                             <img src="img/weather-icons/sunset.png" width="60px">
                                         </div>
                                         <div class="col"></div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row float-right">
                                         <div id="sun-set-time" class="col pl-4 pt-2"></div>
                                         <div class="col"></div>
                                     </div>
@@ -69,33 +69,33 @@
                                 <div class="row">
                                     <div class="col"></div><div class="col text-right">Next update</div>
                                 </div>
-                                <div class="row">
+                                <div class="row task-element">
                                     <div class="col pr-2"><img width="18px;" height="18px;" src="img/trello-app-icon.png"/></div>
                                     <div id="tasks-update" next-refresh-time="" refresh-period-in-seconds="" class="col refresh-time text-right" ></div>
                                 </div>
-                                <div class="row">
+                                <div class="row task-element">
                                     <div class="col">
                                         <div class="progress" style="height: 5px;">
                                             <div id="tasks-update-progress-bar" class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="row travel-element">
                                     <div class="col pr-2">&#128646;</div>
                                     <div id="train-travel-update"  next-refresh-time="" refresh-period-in-seconds="" class="col refresh-time text-right"></div>
                                 </div>
-                                <div class="row">
+                                <div class="row travel-element">
                                     <div class="col">
                                         <div class="progress" style="height: 5px;">
                                             <div id="train-travel-update-progress-bar" class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="row weather-element">
                                     <div class="col pr-2">&#9928;</div>
                                     <div id="weather-update"  next-refresh-time="" refresh-period-in-seconds="" class="col refresh-time text-right" ></div>
                                 </div>
-                                <div class="row">
+                                <div class="row  weather-element">
                                     <div class="col">
                                         <div class="progress" style="height: 5px;">
                                             <div id="weather-update-progress-bar" class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <!-- ///////// WEATHER /////// -->
-                    <div class="row">
+                    <div id="all-weather" class="row weather-element">
                         <div class="col">
                             <div class="row">
                                 <div class="col-sm-4">
@@ -258,14 +258,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div id="all-travel" class="row travel-element">
                         <div class="col">
                             <div id="train-travel" class="row">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 border">
+                <div id="all-tasks" class="col-4 task-element border">
                     <div id="tasks" class="row">
                         <div class="col">
                             <div class="row" id="tasks-headings">
