API calls are now asynchronous

--- a/website/index.html
+++ b/website/index.html
@@ -113,22 +113,22 @@
                                     <div class="row">
                                         <div id="weather-date-now" class="col text-center"></div>
                                         <div class="col-2"></div>
-                                        <div id="weather-date-plus-6hrs" class="col text-center"></div>
+                                        <div id="weather-date-plus-Xhrs" class="col text-center"></div>
                                     </div>
                                     <div class="row">
                                         <div class="col text-center"><img  id="weather-image-now" width="70px" src=""/></div>
                                         <div class="col-2"></div>
-                                        <div class="col text-center"><img id="weather-image-plus-6hrs"  width="70px" src=""/></div>
+                                        <div class="col text-center"><img id="weather-image-plus-Xhrs"  width="70px" src=""/></div>
                                     </div>
                                     <div class="row">
                                         <div id="weather-text-now" class="col text-center"></div>
                                         <div class="col-2"></div>
-                                        <div id="weather-text-plus-6hrs" class="col text-center"></div>
+                                        <div id="weather-text-plus-Xhrs" class="col text-center"></div>
                                     </div>
                                     <div class="row">
                                         <div id="weather-temp-now" class="col text-center"></div>
                                         <div class="col-2"></div>
-                                        <div id="weather-temp-plus-6hrs" class="col text-center"></div>
+                                        <div id="weather-temp-plus-Xhrs" class="col text-center"></div>
                                     </div>
                                     <div class="row">
                                         <div class="col">
@@ -141,7 +141,7 @@
                                         <div class="col">
                                             <div class="row">
                                                 <div class="col text-right">&#x1f33f;</div>
-                                                <div id="weather-grassIndex-plus-6hrs" class="col text-left"></div>
+                                                <div id="weather-grassIndex-plus-Xhrs" class="col text-left"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -156,7 +156,7 @@
                                         <div class="col">
                                             <div class="row">
                                                 <div class="col text-right">&#127795;</div>
-                                                <div id="weather-treeIndex-plus-6hrs" class="col text-left"></div>
+                                                <div id="weather-treeIndex-plus-Xhrs" class="col text-left"></div>
                                             </div>
                                         </div>
                                     </div>
