Grouping tasks by Label, and making them easier to see.

--- a/website/index.html
+++ b/website/index.html
@@ -266,24 +266,8 @@
                     </div>
                 </div>
                 <div id="all-tasks" class="col-4 task-element border">
-                    <div id="tasks" class="row">
-                        <div class="col">
-                            <div class="row" id="tasks-headings">
-                                <div class="col h3">Todo</div>
-<!--                                <div class="col h3">In progress</div>-->
-<!--                                <div class="col h3">Done</div>-->
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <ul class="list-unstyled" id="todo"></ul>
-                                </div>
-<!--                                <div class="col border-left">-->
-<!--                                    <ul class="list-unstyled" id="in-progress"></ul>-->
-<!--                                </div>-->
-<!--                                <div class="col">-->
-<!--                                    <ul class="list-unstyled" id="done"></ul>-->
-<!--                                </div>-->
-                            </div>
+                    <div class="row">
+                        <div id="tasks" class="col">
                         </div>
                     </div>
                 </div>
