Making minimumDriveTransitTime an optional field.

--- a/website/index.html
+++ b/website/index.html
@@ -67,7 +67,7 @@
                             <div><span id="local-time" class="display-4 text-left"></span><span id="local-time-zone" class="text-right"></span></div>
                             <div id="api-calls">
                                 <div class="row">
-                                    <div class="col"></div><div class="col text-right">Next update</div>
+                                    <div class="col"></div><div class="col text-right"><a href="?" class="hidden-link" title="Run in normal mode.">N</a>ext up<a href="?debug=true" class="hidden-link" title="Run in debug mode">d</a>a<a title="Run unit tests" class="hidden-link" href="?testing=true">t</a>e</div>
                                 </div>
                                 <div class="row task-element">
                                     <div class="col pr-2"><img width="18px;" height="18px;" src="img/trello-app-icon.png"/></div>
