Reducing transportAPI.com calls down to one per hour because they are rate limiting to 30 calls a day. Small refactor for school-run - removing useless config, UI update.

--- a/website/index.html
+++ b/website/index.html
@@ -21,7 +21,20 @@
                 <div class="col">
                     <!-- ///////// SCHOOL RUN /////// -->
                     <div id="school-run" class="row display-4 d-none pb-5">
-                        <div id="school-run-departure-time" class="col text-center"></div>
+                        <div id="school-run-departure-time" class="col text-center">
+                            <div class="row">
+                                <div id="second-till-departure" class="col-5"></div>
+                                <div id="current-departure-action" class="col-5"></div>
+                                <div id="departure-time" class="col-5"></div>
+                            </div>
+                            <div id="school-run-progress-bar-row" class="row d-none">
+                                <div class="col">
+                                    <div class="progress" style="height: 50px;">
+                                        <div id="school-run-progress-bar" class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
