Adding code to change the background every 60 seconds.

--- a/website/index.html
+++ b/website/index.html
@@ -297,6 +297,7 @@
         </div>
         <script src="js/jquery-v3.5.0.min.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/utils.js"></script>
+        <script type="text/javascript" src="js/background.js"></script>
         <script type="text/javascript" src="js/date-and-time.js"></script>
         <script type="text/javascript" src="js/travel.js"></script>
         <script type="text/javascript" src="js/tasks.js"></script>
