Downloading and sorting calendar events

--- a/website/index.html
+++ b/website/index.html
@@ -301,6 +301,7 @@
         <script type="text/javascript" src="js/date-and-time.js"></script>
         <script type="text/javascript" src="js/travel.js"></script>
         <script type="text/javascript" src="js/tasks.js"></script>
+        <script type="text/javascript" src="js/calendar.js"></script>
         <script type="text/javascript" src="js/weather-forecast.js"></script>
         <script type="text/javascript" src="js/school-run.js"></script>
         <script type="text/javascript" src="js/testing-and-debugging.js"></script>
