The boys timetable now showing.

--- a/website/index.html
+++ b/website/index.html
@@ -270,8 +270,10 @@
                             </div>
                         </div>
                     </div>
-                    <div id="all-travel" class="row travel-element">
-                        <div class="col">
+                    <div class="row">
+                        <div id="boys-time-table" class="boys-time-table-element border-top">
+                        </div>
+                        <div id="all-travel"  class="travel-element border-left col-9">
                             <div id="train-travel" class="row">
                             </div>
                         </div>
@@ -308,6 +310,7 @@
         <script type="text/javascript" src="js/travel.js"></script>
         <script type="text/javascript" src="js/tasks.js"></script>
         <script type="text/javascript" src="js/calendar.js"></script>
+        <script type="text/javascript" src="js/boys-time-table.js"></script>
         <script type="text/javascript" src="js/weather-forecast.js"></script>
         <script type="text/javascript" src="js/school-run.js"></script>
         <script type="text/javascript" src="js/tests/testing-and-debugging.js"></script>
