Adding dateTime functions + tests

--- a/website/js/tests/unit-test.html
+++ b/website/js/tests/unit-test.html
@@ -10,9 +10,13 @@
     <body>
         <div id="tests"></div>
         <script type="text/javascript" src="../jquery-v3.5.0.min.js" crossorigin="anonymous"></script>
+<!--        <script type="text/javascript" src="../family-dashboard-new.js" crossorigin="anonymous"></script>-->
+        <script type="text/javascript" src="../date-time-new.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="testing-framework.js"></script>
+        <script type="text/javascript" src="date-time-testing.js"></script>
         <script type="text/javascript" src="testing-framework-ui.js"></script>
         <script type="text/javascript" src="testing-framework-tests.js"></script>
+<!--        <script type="text/javascript" src="family-dashboard-testing.js"></script>-->
         <script type="text/javascript" src="all-tests.js"></script>
     </body>
 </html>
