Adding paddedTime methods, and missed imports in unit-test.html

--- a/website/js/tests/unit-test.html
+++ b/website/js/tests/unit-test.html
@@ -12,8 +12,10 @@
         <script type="text/javascript" src="../jquery-v3.5.0.min.js" crossorigin="anonymous"></script>
 <!--        <script type="text/javascript" src="../family-dashboard-new.js" crossorigin="anonymous"></script>-->
         <script type="text/javascript" src="../date-time-new.js" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="../utils-new.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="testing-framework.js"></script>
         <script type="text/javascript" src="date-time-testing.js"></script>
+        <script type="text/javascript" src="utils-testing.js"></script>
         <script type="text/javascript" src="testing-framework-ui.js"></script>
         <script type="text/javascript" src="testing-framework-tests.js"></script>
 <!--        <script type="text/javascript" src="family-dashboard-testing.js"></script>-->
