UX improvements for kitchen screen

--- a/website/index.html
+++ b/website/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <div id="calendar" class="col-2 calendar-element border">
                     <div class="row">
-                        <div id="calendar-events" class="col">
+                        <div id="calendar-events" class="col pl-0 pr-0">
                         </div>
                     </div>
                 </div>
