WIP - started working on acceptance tests

--- a/website/js/tests/unit-test.html
+++ b/website/js/tests/unit-test.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../../css/bootstrap.v4.4.1.min.css"
               integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh">
         <link rel="stylesheet" href="../../css/family-dashboard-styles.css">
-        <title>The Zewde Dashboard</title>
+        <title>Unit testing the Zewde Dashboard</title>
     </head>
     <body>
         <div id="tests"></div>
