--- a/website/js/tests/acceptance-tests.html
+++ b/website/js/tests/acceptance-tests.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../css/bootstrap.v4.4.1.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh">
     <link rel="stylesheet" href="../../css/family-dashboard-styles.css">
-    <title>The Zewde Dashboard</title>
+    <title>Acceptance testing the Zewde Dashboard </title>
 </head>
 <body>
     <div id="tests"></div>
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="testing-framework.js"></script>
     <script type="text/javascript" src="testing-framework-ui.js"></script>
     <script type="text/javascript" src="acceptance-test-framework.js"></script>
+    <script type="text/javascript" src="acceptance-testing-the-date-time-panel.js"></script>
     <script type="text/javascript" src="acceptance-testing-the-dashboard.js"></script>
 </body>
 </html>
